--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -176,16 +176,19 @@ jobs:
             docker run $DOCKER_IMAGE_ID scale --help
             docker run $DOCKER_IMAGE_ID pause --help
             docker run $DOCKER_IMAGE_ID resume --help
+            
       - name: Login to DockerHub
         if: ${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v') }}
         uses: grafana/shared-workflows/actions/dockerhub-login@13fb504e3bfe323c1188bf244970d94b2d336e86 # dockerhub-login-v1.0.1
-      - name: Login to ghcr.io
-        env:
-          GITHUB_ACTOR: ${{ github.actor }}
+
+      - name: Login to GitHub Container Registry
         if: ${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v') }}
-        run: |
-          # Log into GitHub Container Registry
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish k6:master images
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
@@ -200,6 +203,7 @@ jobs:
             --platform linux/amd64,linux/arm64 \
             -t $DOCKER_IMAGE_ID:master-with-browser \
             -t ghcr.io/$GHCR_IMAGE_ID:master-with-browser .
+
       - name: Publish tagged version images
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
         run: |
