--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -3,7 +3,7 @@ on:
   # Enable manually triggering this workflow via the API or web UI
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * 0' # weekly (Sundays at 00:00)
+    - cron: "0 0 * * 0" # weekly (Sundays at 00:00)
 
 defaults:
   run:
@@ -17,7 +17,6 @@ jobs:
       AWSCLI_VERSION: 2.1.36
       S3CMD_VERSION: 2.1.0
       DOCKER_IMAGE_ID: ghcr.io/grafana/k6packager
-      GITHUB_ACTOR: ${{ github.actor }}
     permissions:
       contents: read
       id-token: write
@@ -27,13 +26,21 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+
       - name: Build
         run: |
           cd packaging
           docker compose build packager
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish
         run: |
-          echo "${{ secrets.GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${GITHUB_ACTOR} --password-stdin
           docker push "${DOCKER_IMAGE_ID}:latest"
           docker tag "${DOCKER_IMAGE_ID}" "${DOCKER_IMAGE_ID}:${VERSION}"
           docker push "${DOCKER_IMAGE_ID}:${VERSION}"
